--- a/otherlibs/unix/BUILD.bazel
+++ b/otherlibs/unix/BUILD.bazel
@@ -8,14 +8,16 @@ MODULE_OPTS = ["-nostdlib"]
 SIG_OPTS = ["-nostdlib"]
 
 compiler_library(
-    name = "unix_lib",
+    name = "libUnix",
+    cmxa_eligible = True,
     manifest  = [
         ":Unix",
         ":UnixLabels",
     ],
     visibility = [
         "//debugger:__pkg__",
-        "//ocamltest:__pkg__"
+        "//ocamltest:__pkg__",
+        "//testsuite/tests:__subpackages__",
     ]
 )
 
@@ -165,7 +167,16 @@ cc_library(
         "-I$(GENDIR)/runtime",
         "-I$(GENDIR)/runtime/caml",
         # "$(FILE_OFFSET_BITS)" ## FIXME
-    ],
+    ] + select({
+        # DO NOT FORGET THIS! Without it we get
+        # Undefined symbol "_caml_failed_assert",
+        # because libasmrun.a is always built with -c opt,
+        # which does NOT define -DDEBUG,
+        # and this file may be compiled with -c fastbuild, and
+        # Bazel adds -DDEBUG on macos under fastbuild (a bug)
+        "//config:macos_fastbuild?": ["-UDEBUG"],
+        "//conditions:default":  []
+    }),
     defines = ["CAML_BUILDING_UNIX"],
     linkopts = ["-lm"],
     toolchains = ["//profile/system/local"],
