--- a/typing/BUILD.bazel
+++ b/typing/BUILD.bazel
@@ -92,6 +92,7 @@ SIG_OPTS    = []
 
 compiler_library(
     name = "ocamlcommon",
+    archivable = False,
     manifest  = [
         ":Btype",
         ":Cmt2annot",
